# london-crime-dashboard

./: .gitignore  Procfile  RAILWAY_DEPLOYMENT.md  README.md  install_chrome.sh  main.py  metadata.json  pyproject.toml  railway.toml  requirements.txt  run_datasette.sh  run_monthly_scraper.py  run_scraper.sh
dashboards/: crime_dashboard.json  crime_dashboard.yaml
